INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc
					${CMAKE_CURRENT_SOURCE_DIR}/src)

LIST(APPEND SOURCES
			${CMAKE_CURRENT_SOURCE_DIR}/src/main.cxx
			${CMAKE_CURRENT_SOURCE_DIR}/inc/virtual.h
			${CMAKE_CURRENT_SOURCE_DIR}/src/virtual.cxx
			)

ADD_EXECUTABLE(cpp ${SOURCES})
SET_TARGET_PROPERTIES(cpp PROPERTIES FOLDER "app")
